# mraz

./: .gitmodules  .travis.yml  Makefile  README.md  __metadata__.py  pyproject.toml  setup.py
.github/workflows/: main.yml
mraz/: ScoreTemplate.py  SilverDesignMaker.py  __init__.py  __metadata__  __metadata__.py  library.py  show.py  stylesheet.ily  tools.py
mraz/builds/_assets/: preface-body.tex
mraz/builds/arch-a/: music.ly  (+2 more)
mraz/etc/: berkeley.md  feedforward.md  figures.md  figures.txt  map.md  materials.md  moments.md  moments.txt  mraz-program-notes.rtf  resonance.md  resonance.txt  sections.txt  segments.txt  sketches.txt  stages.md  stages.txt  to-do.md  to-do.txt
mraz/materials/: __abbreviations__.py
mraz/sections/: stylesheet.ily
mraz/segments/: stylesheet.ily
mraz/show/: moments.ly  transforms.ly
mraz/stylesheets/: context-definitions.ily  contexts.ily  default-instrument-names.ily  markups.ily  stylesheet.ily  voice-colors.ily
mraz/test/: test_materials.py  test_mraz_materials.py  test_mraz_segments.py  test_packages.py  test_segments.py
mraz/tools/: CollectionMaker.py  DesignMaker.py  FigureAccumulator.py  FigureGallery.py  Gallery.py  MusicAccumulator.py  ScoreTemplate.py  SegmentMaker.py  SilverDesignMaker.py  __init__.py  clean_up_repeat_ties.py  final_markup.py  hide_music.py  make_anchor_figure_maker.py  make_delicatissimo_figure_maker.py  make_design_1.py  make_mraz_figure_maker.py  make_mraz_music_maker.py  music_maker.py  transparent_music.py
source/mraz/: library.py  stylesheet.ily
tests/: test_moments.py  test_transforms.py
(+481 files in other folders)
