[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mraz"
version = "3.27"
description = "Mráz (2017) for piano"
authors = [{ name = "Trevor Bača", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.27"]

[project.urls]
Homepage = "https://github.com/trevorbaca/mraz"

[tool.setuptools]
packages = ["mraz"]
package-dir = { "" = "source" }
